# algorithmic-fairness

./: .gitignore  README.md  exploration.ipynb  exploration_oliver.ipynb  exploration_oliver1.ipynb  fairness.ipynb  pyproject.toml  report.qmd
notebooks/: exploration.ipynb  exploration_david.ipynb
sandbox/: fairness_metrics.py  group_comparison.py  process_data.py
